--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
       <hr class="sep"/>
       <p class="mast__text js-spanize">
 Я сижу и вспоминаю всё,
-за что мне стоит попросить у тебя прощения:
-за раны, которые мы нанесли друг другу,
+за что мне стоит 
+попросить у тебя прощения:
+за раны, 
+которые мы нанесли друг другу,
 за несправедливые слова, 
 что бросал в твой адрес,
 за образ, который придумал, 
 и слова, которые ждал от тебя.
 Прости меня.
-Моё сердце навсегда останется с тобой,
+Моё сердце 
+навсегда останется с тобой,
 потому что ты — часть меня.
 Пусть ты знаешь:
-где-то внутри я ношу твой след,
-и я благодарен за каждый миг,
-кем бы ты ни стала,
+где-то внутри 
+я ношу твой след,
+и я благодарен за каждый миг.
+Кем бы ты ни стала,
 где бы ни оказалась,
 мои мысли всегда с тобой.
 Тот, кто все еще с тобой. Твой nr.</p>
