--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 Кем бы ты ни стала,
 где бы ни оказалась,
 мои мысли всегда с тобой.
-Тот, кто все еще с тобой. Твой nr.</p>
+Тот, кто все еще рядом. Твой nr.</p>
 
     </header>
   </section>
