--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- partial:index.partial.html -->
 <main>
   <section class="mast">
-    <figure class="mast__bg" style="background-image:url(https://unsplash.it/1800/800?image=893)"></figure>
+    <figure class="mast__bg"></figure>
     <header class="mast__header">
       <h1 class="mast__title js-spanize">Письмо для darling</h1> 
       <hr class="sep"/>
